Regression: Fix the editor guider message for first time users
When editing for the first time users get a special message which was
not showing.
Add editor related FIXME's to make sure we do some work
to ensure this doesn't happen again
and clean it up

--- a/less/modules/editor.less
+++ b/less/modules/editor.less
@@ -69,8 +69,9 @@
 
 		.message {
 			margin: 0 0 .7em;
-			padding: 0 0 1em;
+			padding: 0 0 .3em;
 			border-bottom: 1px solid #ccc;
+			color: #707070;
 
 			p {
 				display: inline-block;
